Fixed links having the wrong color.

--- a/src/layoutindex.css
+++ b/src/layoutindex.css
@@ -125,6 +125,10 @@ a:hover {
 }
 
 a {
+    color: var(--color-6);
+}
+
+h2>a, h3>a {
     color: var(--color-7);
 }
 
